--- a/views/admin/posting.ejs
+++ b/views/admin/posting.ejs
@@ -14,7 +14,16 @@
                         <%  }); %>
                     <% } %>
                     <input placeholder="Tiêu đề ở đây" style="width: 50%; margin: 10px;">
-                    <div class="form-group"><textarea class="form-control form-control-lg" name="content" id="content" style="width: 50%;margin-left: 25%;min-height: 200px;"></textarea></div>
+                    <div class="form-group"><textarea class="form-control form-control-lg" name="content" id="content" style="width: 50%;margin-left: 25%;min-height: 200px;"><%
+                            if (locals.posts) {
+                                var i = 1;
+                                posts.forEach   (post => {
+                            %>◣<%= i %>◢
+<%= post.content %>
+
+<% i++;});
+                                } %>
+                        </textarea></div>
                     <div class="form-group">Image ở đây</div>
                     <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Admin comment here!" name="content" id="content" style="width: 50%;margin-left: 25%;min-height: 100px;"></textarea></div>
                     <div class="form-group">
