--- a/views/admin/listPost.ejs
+++ b/views/admin/listPost.ejs
@@ -50,6 +50,17 @@
                         } %>
                         </tbody>
                         <button class="btn btn-primary btn-lg" type="submit" style="width: 20%;">Đăng bài</button>
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Bộ lọc
+                                <span class="caret"></span></button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đang đợi duyệt</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đã duyệt</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Từ chối</a></li>
+                                <li role="presentation" class="divider"></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Xem hết</a></li>
+                            </ul>
+                        </div>
                     </form>
                 </table>
 
