--- a/views/admin/listPost.ejs
+++ b/views/admin/listPost.ejs
@@ -28,14 +28,14 @@
                     <form action="/admin/posting" method="get">
                         <tbody>
                         <%
-                        if (locals.posts) {
+                        if (locals.posts.length > 0) {
                             var i = (current == 1) ? 1 : (current - 1) * 10 + 1;
                             posts.forEach(post => {
                         %>
                             <tr>
-                                <th scope="col"><input type="checkbox" class="PostSelected" name="check"
-                                                       value="<%= post._id %>"></th>
-                                <th scope="row"><%= i %></th>
+                                <td scope="col"><input type="checkbox" class="PostSelected" name="check"
+                                                       value="<%= post._id %>"></td>
+                                <td scope="row"><%= i %></td>
                                 <td><%= post.content.length > 30 ? post.content.substring(0, 30) + '...' : post.content %></td>
                                 <td><%= post.image.length %></td>
                                 <td><%- statusList[post.status] %></td>
@@ -47,18 +47,26 @@
                                 </td>
                             </tr>
                         <% i++;});
-                        } %>
+                        } else { %>
+                            <tr>
+                                <td>
+                                    <p>Danh sách trống</p>
+                                </td>
+                            </tr>
+                        <%
+                            }
+                        %>
                         </tbody>
                         <button class="btn btn-primary btn-lg" type="submit" style="width: 20%;">Đăng bài</button>
                         <div class="dropdown">
                             <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Bộ lọc
                                 <span class="caret"></span></button>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đang đợi duyệt</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Đã duyệt</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Từ chối</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost?filter=0">Đang đợi duyệt</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost?filter=1">Đã duyệt</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost?filter=2">Từ chối</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Xem hết</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost">Xem hết</a></li>
                             </ul>
                         </div>
                     </form>
