--- a/views/admin/posting.ejs
+++ b/views/admin/posting.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <div class="shadow-lg d-block shadow text-center" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
-                <form style="padding-top: 70px;" method="post" action="/post" enctype="multipart/form-data">
+                <form style="padding-top: 70px;" method="post" action="/admin/post" enctype = "multipart/form-data">
                     <div class="form-group">
                         <h1 class="text-center" style="color: rgb(1,1,1);font-weight: bold;">Đăng bài</h1>
                     </div>
@@ -13,7 +13,7 @@
                             </div>
                         <%  }); %>
                     <% } %>
-                    <input placeholder="Tiêu đề ở đây" style="width: 50%; margin: 10px;">
+                    <input name="title" placeholder="Tiêu đề ở đây" style="width: 50%; margin: 10px;" value="#cfs<%= numOfTitle %>">
                     <div class="form-group"><textarea class="form-control form-control-lg" name="content" id="content" style="width: 50%;margin-left: 25%;min-height: 200px;"><%
                             if (locals.posts) {
                                 var i = 1;
@@ -21,11 +21,20 @@
                             %>◣<%= i %>◢
 <%= post.content %>
 
-<% i++;});
-                                } %>
-                        </textarea></div>
-                    <div class="form-group">Image ở đây</div>
-                    <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Admin comment here!" name="content" id="content" style="width: 50%;margin-left: 25%;min-height: 100px;"></textarea></div>
+<% i++;});} %></textarea></div>
+                    <div class="form-group">
+                        <% if(Images){ %>
+                            <% Images.forEach(img => { %>
+                                <input name="img" value="<%= img._id %>" type="checkbox" checked>
+                                <img style="width: 20%" src="data:image/png;base64,<%= img.data.toString('base64') %>" />
+                            <% }) %>
+                        <% } %>
+                    </div>
+                    <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Admin comment here!" name="commentOfAd" id="content" style="width: 50%;margin-left: 25%;min-height: 100px;"></textarea></div>
+                    <div class="custom-file mb-3">
+                        <input type="file" accept="image/*" class="custom-file-input" id="customFile" name="image" multiple>
+                        <label class="custom-file-label" for="customFile">Chọn hình ảnh</label>
+                    </div>
                     <div class="form-group">
                         <button class="btn btn-primary btn-lg" type="submit" style="width: 20%;">Post</button>
                         <a href="/admin/listPost" class="btn btn-dark btn-lg" style="width: 20%;">Cancel</a>
