--- a/views/member/post.ejs
+++ b/views/member/post.ejs
@@ -18,7 +18,7 @@
             </div>
 
             <div class="custom-file mb-3">
-                <input type="file" accept="image/*" class="custom-file-input" id="customFile" name="image">
+                <input type="file" accept="image/*" class="custom-file-input" id="customFile" name="image" multiple>
                 <label class="custom-file-label" for="customFile">Chọn hình ảnh</label>
             </div>
 
