--- a/views/admin/detail.ejs
+++ b/views/admin/detail.ejs
@@ -24,7 +24,15 @@
                         <% } %>
                     </div>
                     <div class="form-group"><textarea class="form-control form-control-lg" placeholder="Admin note send user here!" name="messagesOfAdmin" style="width: 50%;margin-left: 25%;min-height: 100px; max-height: 500px;"><%= poster.note %></textarea></div>
-                    <div class="form-group"><input type="checkbox" name="statusBox" <%= poster.status==2?"checked":0 %> >Từ chối bài đăng</div>
+                    <%
+                    if(poster.status == 1){
+                        %><div class="form-group"><a href="<%= poster.PostUrl %>" target="_blank">Liên kết đến bài viết</a></div>
+                    <% } else {
+                            %>
+                        <div class="form-group"><input type="checkbox" name="statusBox" <%= poster.status==2?"checked":0 %> >Từ chối bài đăng</div>
+                    <%
+                    }
+                    %>
                     <div class="form-group">
                         <button class="btn btn-primary btn-lg" type="submit" style="width: 20%;">Send</button>
                         <a href="/admin/listPost" class="btn btn-dark btn-lg" style="width: 20%;">Cancel</a>
