--- a/views/admin/manageUser.ejs
+++ b/views/admin/manageUser.ejs
@@ -47,7 +47,7 @@
                         <% if (current == 1) { %>
                             <li class="page-item disabled"><a class="page-link">Trang Đầu</a></li>
                         <% } else { %>
-                            <li class="page-item"><a class="page-link" href="/admin/managerUser/1">Trang Đầu</a></li>
+                            <li class="page-item"><a class="page-link" href="/admin/manageUser/1">Trang Đầu</a></li>
                         <% } %>
                         <% var i = (Number(current) > 2 ? Number(current) - 1 : 1) %>
                         <% if (i !== 1) { %>
@@ -57,7 +57,7 @@
                             <% if (i == current) { %>
                                 <li class="page-item active"><a class="page-link"><%= i %></a></li>
                             <% } else { %>
-                                <li class="page-item "><a class="page-link" href="/admin/managerUser/<%= i %>"><%= i %></a>
+                                <li class="page-item "><a class="page-link" href="/admin/manageUser/<%= i %>"><%= i %></a>
                                 </li>
                             <% } %>
                             <% if (i == Number(current) + 1 && i < pages) { %>
@@ -67,7 +67,7 @@
                         <% if (current == pages) { %>
                             <li class="page-item disabled"><a class="page-link">Trang Cuối</a></li>
                         <% } else { %>
-                            <li class="page-item"><a class="page-link" href="/admin/managerUser/<%= pages %>">Trang
+                            <li class="page-item"><a class="page-link" href="/admin/manageUser/<%= pages %>">Trang
                                     Cuối</a></li>
                         <% } %>
                     </ul>
