--- a/public/assets/css/mainpost.css
+++ b/public/assets/css/mainpost.css
@@ -46,7 +46,7 @@ h1,h2,h3,h4,h5,h6 {
 p {
     font-size: 14px;
     line-height: 1.7;
-    color: #666666;
+    color: #ffffff;
     margin: 0px;
 }
 
